[package]

name = "wren-sys"
version = "0.1.5"
authors = ["Paul Woolcock <paul@woolcock.us>"]
links = "wren"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pwoolcoc/wren-sys"
homepage = "https://github.com/pwoolcoc/wren-sys"
description = "low-level bindings to the Wren (https://github.com/munificent/wren) programming language"
